src/test/ui/mut-ref.stderr
error: the order of `mut` and `ref` is incorrect
  --> $DIR/mut-ref.rs:14:9
   |
14 |     let mut ref x = 10; //~ ERROR the order of `mut` and `ref` is incorrect
   |         ^^^^^^^ help: try switching the order: `ref mut`

error: aborting due to previous error

